syntax = "proto3";
package nibiru.genmsg.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/genmsg/v1";

// GenesisState represents the messages to be processed during genesis by the genmsg module.
message GenesisState {
  repeated google.protobuf.Any messages = 1;
}
